CRM-69 fix view/edit event page

--- a/CRM/views/view-client.ejs
+++ b/CRM/views/view-client.ejs
@@ -1255,6 +1255,7 @@
 
                 <script>
                   function enableFields() {
+                    //if desktop
                     document.getElementById('agentAbbrev').disabled = false;
                     document.getElementById('newClientName').disabled = false;
                     document.getElementById('clientAddress1type').disabled = false;
@@ -1265,6 +1266,17 @@
                     document.getElementById('clientProdPP').disabled = false;
                     document.getElementById('clientProdTP').disabled = false;
                     document.getElementById('clientStatus').disabled = false;
+                    //if mobile
+                    document.getElementById('agentAbbrevMobile').disabled = false;
+                    document.getElementById('newClientNameMobile').disabled = false;
+                    document.getElementById('clientAddress1typeMobile').disabled = false;
+                    document.getElementById('clientAddress2typeMobile').disabled = false;
+                    document.getElementById('clientAddress3typeMobile').disabled = false;
+                    document.getElementById('clientAddress4typeMobile').disabled = false;
+                    document.getElementById('clientProdOXMobile').disabled = false;
+                    document.getElementById('clientProdPPMobile').disabled = false;
+                    document.getElementById('clientProdTPMobile').disabled = false;
+                    document.getElementById('clientStatusMobile').disabled = false;
                   }
                 </script>
 
