CRM-94 - Froze top pane for import pages

--- a/CRM/views/review-agent-upload.ejs
+++ b/CRM/views/review-agent-upload.ejs
@@ -8,6 +8,7 @@
  <!-- CoreUI CSS -->
  <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/css/coreui.min.css" crossorigin="anonymous">
  <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
+ <link rel="stylesheet" type="text/css" href="/stylesheets/custom.css">
 
  <title>CRM - Import Agent</title>
  </head>
