UI Changes:  -  Added "Record" branding
Functional Changes:
 - Pulls active agents for charts.js dashboard population

--- a/CRM/public/stylesheets/custom.css
+++ b/CRM/public/stylesheets/custom.css
@@ -2,6 +2,7 @@
 .tableWrap {
   height: 200px;
   overflow: auto;
+  width: auto;
 }
 /* Set header to stick to the top of the container. */
 thead tr th {
