--- a/CRM/views/partials/header.ejs
+++ b/CRM/views/partials/header.ejs
@@ -1,10 +1,10 @@
- <button class="c-header-toggler c-class-toggler d-lg-none mfe-auto" type="button" data-target="#sidebar" data-class="c-sidebar-show">
+<button class="c-header-toggler c-class-toggler d-lg-none" type="button" data-target="#sidebar" data-class="c-sidebar-show">
 <i class="cil-hamburger-menu"></i>
 </button>
 
 
-<a class="c-header-brand d-lg-none c-header-brand-up-center" href="/home">
-  CRM SOFTWARE
+<a class="c-header-brand d-lg-none c-header-brand-sm-up-center mx-auto" href="/home">
+  <img src="/images/record.svg" width="118" height="46" href="/home"></img>
 </a>
 
 
@@ -46,7 +46,7 @@
 %>
 
 
-<ul class="c-header-nav d-lg-none">
+<ul class="c-header-nav d-lg-none px-1">
   <li class="c-header-nav-item dropdown">
   <% if (grantEventCreate || grantClientCreate || grantContactCreate || grantUserCreate) {%>
     <a class="c-header-nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="cil-caret-bottom"></i></a>
