--- a/CRM/views/partials/sidebar.ejs
+++ b/CRM/views/partials/sidebar.ejs
@@ -1,6 +1,11 @@
 <div class="c-sidebar-brand d-md-down-none">
-<a href="/home" style="color:white;">CRM SOFTWARE</a>
+  <!-- <a href="/home" style="color:white;">CRM SOFTWARE</a> -->
+<a href="/home"><img src="/images/record.svg" width="118" height="46" href="/home"></img></a>
+
+
 </div>
+
+
 
 <%
   var grantEventRead = false;
