--- a/CRM/views/view-users.ejs
+++ b/CRM/views/view-users.ejs
@@ -51,6 +51,9 @@
                   </form>
                   </div>
                 </div>
+
+<%- users[1].username %>
+
               </div>
         </main>
       </main>
