Fixed log in page with temporary logo

--- a/CRM/views/home.ejs
+++ b/CRM/views/home.ejs
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="en">
  <head>
  <!-- Required meta tags -->
@@ -9,7 +9,7 @@
  <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui@3.0.0-rc.0/dist/css/coreui.min.css" crossorigin="anonymous">
  <link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
 
- <title>CRM - Home</title>
+ <title>RECORD - Home</title>
  </head>
  <body class="c-app">
 
