--- a/CRM/views/partials/footer.ejs
+++ b/CRM/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<link rel='stylesheet' href='https://unpkg.com/@coreui/coreui@2.1.16/dist/css/coreui.min.css' />
-<link rel="stylesheet" href="https://unpkg.com/@coreui/icons@1.0.0/css/all.min.css">
 
-<p class="text-center text-muted">© Copyright 2019 CHANSEY CRM</p>
+<div class="container-fluid">
+  <p class="text-center text-muted">© 2020 RECORD SOFTWARE</p>
+</div>
